No auth internacionalizados

--- a/consultas/src/main/resources/message_pt.properties
+++ b/consultas/src/main/resources/message_pt.properties
@@ -3,3 +3,12 @@ Entrar=Entrar
 ListarMedicos=Listar médicos
 ListarEspecialidade =  Listar médicos por especialidade
 AutorizacaoUsuario=Autorização usuário
+ListaDeMedicos=Listar médicos
+ID=ID
+Nome=Nome
+CRM=CRM
+Especialidade=Especialidade
+ListaEspecialidade=Listar médicos por especialidade
+Voltar=Voltar
+SelecionarEspecialidade=Selecionar por especialidade
+Buscar=Buscar
