mais páginas internacionalizadas.

--- a/consultas/src/main/resources/message_pt.properties
+++ b/consultas/src/main/resources/message_pt.properties
@@ -1,27 +1,64 @@
 Senha=Senha
 Entrar=Entrar
-ListarMedicos=Listar médicos
-ListarEspecialidade =  Listar médicos por especialidade
-AutorizacaoUsuario=Autorização usuário
-ListaDeMedicos=Listar médicos
+ListarMedicos=Listar Médicos
+ListarEspecialidade=Listar Médicos Por Especialidade
+AutorizacaoUsuario=Autorização Usuário
+ListaDeMedicos=Listar Médicos
 ID=ID
 Nome=Nome
 CRM=CRM
 Especialidade=Especialidade
-ListaEspecialidade=Listar médicos por especialidade
+ListaEspecialidade=Listar Médicos Por Especialidade
 Voltar=Voltar
-SelecionarEspecialidade=Selecionar por especialidade
+SelecionarEspecialidade=Selecionar Por Especialidade
 Buscar=Buscar
-GerenciarPacientes=Gerenciar pacientes
-ListaDeConsultas=Lista de consultas
+GerenciarPacientes=Gerenciar Pacientes
+ListaDeConsultas=Lista de Consultas
 Sair=Sair
-AgendarNovaConsulta=Agendar nova consulta
+AgendarNovaConsulta=Agendar Nova Consulta
 Ola=Olá
 PaginaDeLogin=Página de Login
-Edicao=edição
+Edicao=Edição
 Cadastro=Cadastro
 CPF=CPF
 Telefone=Telefone
 Sexo=Sexo
-DataDeNascimento=Data de nascimento
-PacienteLista=Lista de paciente
+DataDeNascimento=Data de Nascimento
+PacienteLista=Lista de Pacientes
+
+GerenciamentoDeConsultas=Gerenciamento de Consultas
+MenuPrincipal=Menu Principal
+Logout=Logout
+Medico=Médico
+Data=Data
+Acoes=Ações
+Remocao=Remoção
+ConfirmacaoRemocaoConsulta=Tem certeza de que deseja excluir esta consulta?
+Consultorio=Consultório
+Lista=Lista
+Insercao=Inserção
+Medicos=Médicos
+Hora=Hora
+DisponibilidadeIndisponivel=Data/horário indisponível. Escolha outra data ou horário para se consultar.
+Agendar=Agendar
+Paciente=Paciente
+PaginaAdministrador=Página do Administrador
+AdministrarPacientes=Administrar Pacientes
+AdministrarMedicos=Administrar Médicos
+AdministrarUsuariosSistema=Administrar Usuários do Sistema
+GerenciamentoUsuariosSistema=Gerenciamento de Usuários do Sistema
+AdicionarNovoUsuario=Adicionar Novo Usuário
+ListaUsuariosAdministradores = Lista de Usuários Administradores
+Email=E-mail
+ConfirmacaoRemocaoUsuario=Tem certeza de que deseja excluir este usuário?
+ListaUsuarios=Lista de Usuários
+Salvar=Salvar
+GerenciamentoPacientes=Gerenciamento de Pacientes
+AdicionarNovoPaciente=Adicionar Novo Paciente
+ConfirmacaoRemocaoPaciente=Tem certeza de que deseja excluir este paciente?
+GerenciamentoMedicos=Gerenciamento de Médicos
+AdicionarNovoMedico=Adicionar Novo Médico
+ListaMedicos=Lista de Médicos
+ConfirmacaoRemocaoMedico=Tem certeza de que deseja excluir este médico?
+SelecioneEspecialidade=Selecione uma especialidade
+As=às
