últimas páginas internacionalizadas.

--- a/consultas/src/main/resources/message_pt.properties
+++ b/consultas/src/main/resources/message_pt.properties
@@ -62,3 +62,4 @@ ListaMedicos=Lista de Médicos
 ConfirmacaoRemocaoMedico=Tem certeza de que deseja excluir este médico?
 SelecioneEspecialidade=Selecione uma especialidade
 As=às
+ListaDeMedicosEspecialidade=Lista de Médicos Por Especialidade
