crud paciente (ainda incompleto)

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -11,6 +11,15 @@ sidebar.titulo.editora = Editoras
 sidebar.titulo.livro = Livros
 sidebar.titulo.usuario = Usuários
 sidebar.titulo.compra = Compras
+sidebar.titulo.paciente = Paciente
+
+# Títulos Paciente
+
+paciente.cadastrar.label = Cadastrar Paciente
+paciente.listar.label = Listar Pacientes
+paciente.username.label = Login
+paciente.password.label = Senha
+paciente.name.label = Nome
 
 # Titulos Editora
 
@@ -41,6 +50,12 @@ usuario.password.label = Senha
 usuario.name.label = Nome
 usuario.CPF.label = CPF
 usuario.role.label = Papel
+
+paciente.email.label = E-mail
+paciente.CPF.label = CPF
+paciente.telefone.label = Telefone
+paciente.dataNascimento.label = Data de Nascimento
+paciente.sexo.label = Sexo
 
 # Titulos Compra
 
@@ -96,7 +111,7 @@ usuario.delete.sucess = Usuário excluído com sucesso.
 # Mensagens Login
 
 login.message  = Página de Login
-login.username = Login
+login.email = Login
 login.password = Senha
 login.button   = Entrar
 login.error    = Nome de usuário ou senha inválida.
