conclusão do crud de paciente.

--- a/consultorio-T2/consultorio/bin/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/bin/src/main/resources/messages.properties
@@ -80,18 +80,18 @@ default.message = Ocorreu um erro inesperado, tente mais tarde.
 
 # Mensagens (Flash Attributes)
 
-livro.create.sucess = Livro criado com sucesso.
-livro.edit.sucess   = Livro editado com sucesso.
-livro.delete.sucess = Livro excluído com sucesso.
+livro.create.success = Livro criado com sucesso.
+livro.edit.success   = Livro editado com sucesso.
+livro.delete.success = Livro excluído com sucesso.
 
-editora.create.sucess = Editora criada com sucesso.
-editora.edit.sucess   = Editora editada com sucesso.
-editora.delete.sucess = Editora excluída com sucesso.
+editora.create.success = Editora criada com sucesso.
+editora.edit.success   = Editora editada com sucesso.
+editora.delete.success = Editora excluída com sucesso.
 editora.delete.fail   = Editora não excluída. Possui livro(s) vinculado(s).
 
-usuario.create.sucess = Usuário criado com sucesso.
-usuario.edit.sucess   = Usuário editado com sucesso.
-usuario.delete.sucess = Usuário excluído com sucesso.
+usuario.create.success = Usuário criado com sucesso.
+usuario.edit.success   = Usuário editado com sucesso.
+usuario.delete.success = Usuário excluído com sucesso.
 
 # Mensagens Login
 
