--- a/consultorio-T2/consultorio/bin/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/bin/src/main/resources/messages_en.properties
@@ -80,18 +80,18 @@ default.message = An unexpected error occurred.
 
 # Mensagens (Flash Attributes)
 
-livro.create.sucess = Book successfully created. 
-livro.edit.sucess   = Book successfully edited.
-livro.delete.sucess = Book successfully deleted.
+livro.create.success = Book successfully created. 
+livro.edit.success   = Book successfully edited.
+livro.delete.success = Book successfully deleted.
 
-editora.create.sucess = Publisher successfully created. 
-editora.edit.sucess   = Publisher successfully edited.
-editora.delete.sucess = Publisher successfully deleted.
+editora.create.success = Publisher successfully created. 
+editora.edit.success   = Publisher successfully edited.
+editora.delete.success = Publisher successfully deleted.
 editora.delete.fail = Publisher not deleted because there is/are associated book(s). 
 
-usuario.create.sucess = User successfully created. 
-usuario.edit.sucess   = User successfully edited.
-usuario.delete.sucess = User successfully deleted.
+usuario.create.success = User successfully created. 
+usuario.edit.success   = User successfully edited.
+usuario.delete.success = User successfully deleted.
 
 # Mensagens Login
 
