--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -16,6 +16,7 @@ sidebar.titulo.paciente = Paciente
 # Títulos Paciente
 
 paciente.cadastrar.label = Cadastrar Paciente
+paciente.editar.label = Editar Paciente
 paciente.listar.label = Listar Pacientes
 paciente.username.label = Login
 paciente.password.label = Senha
@@ -119,6 +120,7 @@ login.email = Login
 login.password = Senha
 login.button   = Entrar
 login.error    = Nome de usuário ou senha inválida.
+login.username = Login
 
 user.role = Papel
 
