listagem de consultas pelo login do paciente e criação de dependência entre Paciente e Consulta.

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ sidebar.titulo.livro = Livros
 sidebar.titulo.usuario = Usuários
 sidebar.titulo.compra = Compras
 sidebar.titulo.paciente = Paciente
+sidebar.titulo.consulta = Consultas
 
 # Títulos Paciente
 
@@ -22,6 +23,13 @@ paciente.listar.label = Listar Pacientes
 paciente.username.label = Login
 paciente.password.label = Senha
 paciente.name.label = Nome
+
+# Títulos Lista de Consulta
+consulta.data.label = Data da Consulta
+consulta.medico.label = Nome do Médico
+consulta.especialidade.label = Especialidade
+consulta.cadastrar.label = Agendar Nova Consulta
+consulta.listar.label = Lista de Consultas
 
 # Titulos Editora
 
@@ -113,6 +121,7 @@ usuario.delete.success = Usuário excluído com sucesso.
 paciente.create.success = Paciente criado com sucesso.
 paciente.edit.success = Paciente editado com sucesso.
 paciente.delete.success = Paciente deletado com sucesso.
+paciente.delete.fail = Paciente não excluído(a). Possui consulta(s) vinculada(s).
 
 # Mensagens Login
 
