agendamento de consultas ainda incompleto.

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -31,6 +31,11 @@ consulta.especialidade.label = Especialidade
 consulta.cadastrar.label = Agendar Nova Consulta
 consulta.listar.label = Lista de Consultas
 
+# Título Cadastro de Consulta
+consulta.select-medico.label = Selecione um Médico
+consulta.data.label = Data
+consulta.hora.label = Horário
+
 # Titulos Editora
 
 editora.cadastrar.label = Cadastrar Editora
@@ -122,6 +127,8 @@ paciente.create.success = Paciente criado com sucesso.
 paciente.edit.success = Paciente editado com sucesso.
 paciente.delete.success = Paciente deletado com sucesso.
 paciente.delete.fail = Paciente não excluído(a). Possui consulta(s) vinculada(s).
+
+consulta.create.success = Consulta agendada com sucesso.
 
 # Mensagens Login
 
