Cadastro medico ok, falta listar

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ sidebar.titulo.livro = Livros
 sidebar.titulo.usuario = Usuários
 sidebar.titulo.compra = Compras
 sidebar.titulo.paciente = Paciente
+sidebar.titulo.medico = Medico
 sidebar.titulo.consulta = Consultas
 
 # Títulos Paciente
@@ -71,6 +72,14 @@ paciente.CPF.label = CPF
 paciente.telefone.label = Telefone
 paciente.dataNascimento.label = Data de Nascimento
 paciente.sexo.label = Sexo
+
+
+medico.email.label = E-mail
+medico.password.label = Senha
+medico.nome.label = Nome
+medico.CRM.label = CRM
+medico.cadastrar.label = Cadastro de médicos
+medico.especialidade.label = Especialidade
 
 # Titulos Compra
 
