--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -11,6 +11,7 @@ sidebar.titulo.editora = Publishers
 sidebar.titulo.livro = Books
 sidebar.titulo.usuario = Users
 sidebar.titulo.compra = Purchases
+sidebar.titulo.medico = Medic
 
 # Titulos Editora
 
@@ -43,6 +44,14 @@ usuario.name.label = Name
 usuario.role.label = Role
 
 paciente.email.label = E-mail
+
+
+medico.email.label = E-mail
+medico.password.label = Password
+medico.nome.label = Name
+medico.CRM.label = CRM
+medico.cadastrar.label = Medical record
+medico.especialidade.label = specialty 
 
 # Titulos Compra
 
