Lista de medicos ok, falta o editar

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -80,6 +80,7 @@ medico.nome.label = Nome
 medico.CRM.label = CRM
 medico.cadastrar.label = Cadastro de médicos
 medico.especialidade.label = Especialidade
+medico.listar.label = Lista de medicos
 
 # Titulos Compra
 
