--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -52,6 +52,7 @@ medico.nome.label = Name
 medico.CRM.label = CRM
 medico.cadastrar.label = Medical record
 medico.especialidade.label = specialty 
+medico.listar.label = list of doctors
 
 # Titulos Compra
 
