CRUD de medico finalizado

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -81,7 +81,10 @@ medico.CRM.label = CRM
 medico.cadastrar.label = Cadastro de médicos
 medico.especialidade.label = Especialidade
 medico.listar.label = Lista de medicos
-
+medico.delete.fail = Médico não pode ser deletado pois há consultas em seu nome
+medico.delete.success = Médico deletado com successo
+medico.create.success = Médico criado com sucesso
+medico.edit.success = Médico editado com sucesso
 # Titulos Compra
 
 compra.cadastrar.label = Cadastrar Compra
