--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -53,6 +53,10 @@ medico.CRM.label = CRM
 medico.cadastrar.label = Medical record
 medico.especialidade.label = specialty 
 medico.listar.label = list of doctors
+medico.delete.fail = The doctor cannot be excluded because there are appointments under his name
+medico.delete.success = Doctor successfully deleted 
+medico.create.success = Doctor successfully created
+medico.edit.success = Doctor successfully edited
 
 # Titulos Compra
 
