Lista de consultas do medico ok

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -16,6 +16,8 @@ sidebar.titulo.paciente = Paciente
 sidebar.titulo.medico = Medico
 sidebar.titulo.consulta = Consultas
 
+sidebar.medico.listar = Listar consultas
+
 # Títulos Paciente
 
 paciente.cadastrar.label = Cadastrar Paciente
@@ -30,7 +32,9 @@ consulta.data.label = Data da Consulta
 consulta.medico.label = Nome do Médico
 consulta.especialidade.label = Especialidade
 consulta.cadastrar.label = Agendar Nova Consulta
-consulta.listar.label = Lista de Consultas
+consulta.listar.label = Consultas
+
+consulta.paciente.label = Nome do Paciente
 
 # Título Cadastro de Consulta
 consulta.select-medico.label = Selecione um Médico
