--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -13,6 +13,11 @@ sidebar.titulo.usuario = Users
 sidebar.titulo.compra = Purchases
 sidebar.titulo.medico = Medic
 
+consulta.listar.label = Appointments
+
+consulta.paciente.label = Patient name
+
+
 # Titulos Editora
 
 editora.cadastrar.label = Register Publisher
