--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -159,3 +159,15 @@ login.username = Login
 user.role = Papel
 
 login.listar = Listar Médicos
+login.listaresp = Listar Médicos por Especialidades
+login.especialidade.cardiologia = Cardiologia
+login.especialidade.dermatologia = Dermatologia
+login.especialidade.neurologia = Neurologia
+login.especialidade.psiquiatria = Psiquiatria
+login.especialidade.endocrinologia = Endocrinologia
+login.especialidade.ortopedia = Ortopedia
+login.especialidade.oftalmologia = Oftalmologia
+login.especialidade.anestesiologia = Anestesiologia
+login.especialidade.ginecologia = Ginecologia
+login.especialidade.pediatria = Pediatria
+login.especialidade.urologia = Urologia
