--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -32,12 +32,13 @@ consulta.data.label = Data da Consulta
 consulta.medico.label = Nome do Médico
 consulta.especialidade.label = Especialidade
 consulta.cadastrar.label = Agendar Nova Consulta
+consulta.editar.label = Editar Consulta
 consulta.listar.label = Consultas
 
 consulta.paciente.label = Nome do Paciente
 
 # Título Cadastro de Consulta
-consulta.select-medico.label = Selecione um Médico
+consulta.select-medico.label = Médico
 consulta.data.label = Data
 consulta.hora.label = Horário
 
@@ -146,6 +147,8 @@ paciente.delete.success = Paciente deletado com sucesso.
 paciente.delete.fail = Paciente não excluído(a). Possui consulta(s) vinculada(s).
 
 consulta.create.success = Consulta agendada com sucesso.
+consulta.create.indisponivel = Data/horário não disponível. Por favor, escolha outra data/horário.
+consulta.delete.success = Consulta removida com sucesso.
 
 # Mensagens Login
 
