--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -163,6 +163,7 @@ user.role = Papel
 
 login.listar = Listar Médicos
 login.listaresp = Listar Médicos por Especialidades
+login.especialidade = Especialidades
 login.especialidade.cardiologia = Cardiologia
 login.especialidade.dermatologia = Dermatologia
 login.especialidade.neurologia = Neurologia
@@ -174,3 +175,4 @@ login.especialidade.anestesiologia = Anestesiologia
 login.especialidade.ginecologia = Ginecologia
 login.especialidade.pediatria = Pediatria
 login.especialidade.urologia = Urologia
+lista.esp = Listagem de Médicos por Especialidade
