--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -128,3 +128,16 @@ user.role = Role
 
 login.listar = List doctors
 login.listaresp = List Doctors by Specialties
+login.especialidade = Specialties
+login.especialidade.cardiologia = Cardiology
+login.especialidade.dermatologia = Dermatology
+login.especialidade.neurologia = Neurology
+login.especialidade.psiquiatria = Psychiatry
+login.especialidade.endocrinologia = Endocrinology
+login.especialidade.ortopedia = Orthopedics
+login.especialidade.oftalmologia = Ophthalmology
+login.especialidade.anestesiologia = Anesthesiology
+login.especialidade.ginecologia = Gynecology
+login.especialidade.pediatria = Pediatrics
+login.especialidade.urologia = Urology
+lista.esp = List of Doctors by Specialty
