internacionalizando cadastro medico

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -176,3 +176,6 @@ login.especialidade.ginecologia = Ginecologia
 login.especialidade.pediatria = Pediatria
 login.especialidade.urologia = Urologia
 lista.esp = Listagem de Médicos por Especialidade
+
+
+medico.especialidade.label=Selecione uma especialidade
