--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -141,3 +141,7 @@ login.especialidade.ginecologia = Gynecology
 login.especialidade.pediatria = Pediatrics
 login.especialidade.urologia = Urology
 lista.esp = List of Doctors by Specialty
+
+
+
+medico.especialidade.label=Select a specialty
