finalizada internacionalizacao de cadastra medico

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -82,7 +82,7 @@ paciente.sexo.label = Sexo
 medico.email.label = E-mail
 medico.password.label = Senha
 medico.nome.label = Nome
-medico.CRM.label = CRM
+medico.CRM.label = CRM (exemplo 12.345/SP)
 medico.cadastrar.label = Cadastro de médicos
 medico.especialidade.label = Especialidade
 medico.listar.label = Lista de medicos
