--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -54,7 +54,7 @@ paciente.email.label = E-mail
 medico.email.label = E-mail
 medico.password.label = Password
 medico.nome.label = Name
-medico.CRM.label = CRM
+medico.CRM.label = CRM (example 12.345/SP)
 medico.cadastrar.label = Medical record
 medico.especialidade.label = specialty 
 medico.listar.label = list of doctors
