arrumando bug de horario do agendar consultas

--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -14,7 +14,7 @@ sidebar.titulo.compra = Purchases
 sidebar.titulo.medico = Medic
 
 consulta.listar.label = Appointments
-
+consulta.data.label = date Appointmentss
 consulta.paciente.label = Patient name
 
 
@@ -62,6 +62,8 @@ medico.delete.fail = The doctor cannot be excluded because there are appointment
 medico.delete.success = Doctor successfully deleted 
 medico.create.success = Doctor successfully created
 medico.edit.success = Doctor successfully edited
+
+
 
 # Titulos Compra
 
