--- a/consultorio-T2/consultorio/src/main/resources/ValidationMessages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/ValidationMessages_en.properties
@@ -21,3 +21,13 @@ Unique.editora.CNPJ = The CNPJ must be unique.
 # Validação campos Compra
 
 NotNull.compra.livro = Select a book.
+
+# Consultation Fields Validation
+
+NotNull.consulta.data = Select a date.
+NotNull.consulta.hora = Select a time.
+NotNull.consulta.medico = Select a doctor.
+
+# Patient Fields Validation
+
+past.paciente.dataNascimento = Enter a valid date.
