--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -178,3 +178,11 @@ lista.esp = Listagem de Médicos por Especialidade
 
 
 medico.especialidade.label=Selecione uma especialidade
+
+title.listaEspec.label = Lista de Médicos por Especialidade
+title.listaMedicos.label = Lista de Médicos
+
+select-medico = Selecione um médico.
+select-hora = Selecione um horário.
+
+medico.editar.label = Editar Médico
