--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -1,6 +1,7 @@
 # Titulos do Header
 
-title.label = Virtual Book Store
+title.label = Virtual Clinic
+home.hello = Hello
 
 # Titulos do Sidebar
 
@@ -11,25 +12,47 @@ sidebar.titulo.editora = Publishers
 sidebar.titulo.livro = Books
 sidebar.titulo.usuario = Users
 sidebar.titulo.compra = Purchases
-sidebar.titulo.medico = Medic
+sidebar.titulo.paciente = Patients
+sidebar.titulo.medico = Doctor
+sidebar.titulo.consulta = Appointments
 
+sidebar.medico.listar = List Appointments
+
+# Titles Paciente
+
+paciente.cadastrar.label = Register Patient
+paciente.editar.label = Edit Patient
+paciente.listar.label = List Patients
+paciente.username.label = Username
+paciente.password.label = Password
+paciente.name.label = Name
+
+# Titles Appointment List
+consulta.data.label = Appointment Date
+consulta.medico.label = Doctor's Name
+consulta.especialidade.label = Specialty
+consulta.cadastrar.label = Schedule New Appointment
+consulta.editar.label = Edit Appointment
 consulta.listar.label = Appointments
-consulta.data.label = date Appointmentss
-consulta.paciente.label = Patient name
 
+consulta.paciente.label = Patient Name
 
-# Titulos Editora
+# Title Appointment Registration
+consulta.select-medico.label = Doctor
+consulta.hora.label = Time
+
+# Titles Editora
 
 editora.cadastrar.label = Register Publisher
-editora.listar.label = Publishers List
+editora.listar.label = List Publishers
 
 editora.nome.label = Name
 editora.cnpj.label = CNPJ
 
-# Titulos Livro
+# Titles Livro
 
 livro.cadastrar.label = Register Book
-livro.listar.label = Books List
+livro.listar.label = List Books
 
 livro.titulo.label = Title
 livro.autor.label = Author
@@ -37,99 +60,108 @@ livro.editora.label = Publisher
 livro.ano.label = Year
 livro.preco.label = Price
 
-# Titulos Usuario
+# Titles Usuario
 
 usuario.cadastrar.label = Register User
-usuario.listar.label = Users List
+usuario.listar.label = List Users
 
-usuario.username.label = Login
+usuario.username.label = Username
 usuario.password.label = Password
-usuario.CPF.label = SSN
 usuario.name.label = Name
+usuario.CPF.label = CPF
 usuario.role.label = Role
 
-paciente.email.label = E-mail
+paciente.email.label = Email
+paciente.CPF.label = CPF
+paciente.telefone.label = Phone
+paciente.dataNascimento.label = Date of Birth
+paciente.sexo.label = Gender
 
-
-medico.email.label = E-mail
+medico.email.label = Email
 medico.password.label = Password
 medico.nome.label = Name
-medico.CRM.label = CRM (example 12.345/SP)
-medico.cadastrar.label = Medical record
-medico.especialidade.label = specialty 
-medico.listar.label = list of doctors
-medico.delete.fail = The doctor cannot be excluded because there are appointments under his name
-medico.delete.success = Doctor successfully deleted 
-medico.create.success = Doctor successfully created
-medico.edit.success = Doctor successfully edited
+medico.CRM.label = CRM (e.g., 12.345/SP)
+medico.cadastrar.label = Register Doctors
+medico.especialidade.label = Specialty
+medico.listar.label = List Doctors
+medico.delete.fail = Doctor cannot be deleted as there are appointments under their name
+medico.delete.success = Doctor deleted successfully
+medico.create.success = Doctor created successfully
+medico.edit.success = Doctor edited successfully
 
-
-
-# Titulos Compra
+# Titles Compra
 
 compra.cadastrar.label = Register Purchase
-compra.listar.label = Purchases List
+compra.listar.label = List Purchases
 
 compra.data.label = Date
-compra.valor.label = Value
+compra.valor.label = Amount
 compra.livro.label = Book
 
-# Mensagens Remoção
+# Removal Messages
 
 remove.label.warning = Attention
-remove.label.message = Click OK to proceed with the deletion...
+remove.label.message = Click OK to proceed with deletion...
 
-# Mensagens Botões & Caixas de Seleção
+# Buttons & Checkboxes Messages
 
 link.excluir.label = Delete
-link.editar.label = Update
+link.editar.label = Edit
 button.cancelar.label = Cancel
 button.salvar.label = Save
 select.label = Select...
 acao.label = Action
 
-# Mensagens de erro
+# Error Messages
 
-error.page.title = Errors page
+error.page.title = Error Page
 
-previous.message = Back to previous page 
+previous.message = Back to the previous page
 
-403.error       = Unauthorized page.
-403.message     = Page not authorized for this user.
-404.error       = Page not found.
-404.message     = The Page url does not exist.
-default.error   = An internal server error has occurred.
-default.message = An unexpected error occurred.
+403.error       = Unauthorized Page
+403.message     = Unauthorized page for the logged-in user.
+404.error       = Page Not Found
+404.message     = The URL for the page does not exist.
+default.error   = Internal Server Error
+default.message = An unexpected error occurred, please try again later.
 
-# Mensagens (Flash Attributes)
+# Flash Attributes Messages
 
-livro.create.success = Book successfully created. 
-livro.edit.success   = Book successfully edited.
-livro.delete.success = Book successfully deleted.
+livro.create.success = Book created successfully.
+livro.edit.success   = Book edited successfully.
+livro.delete.success = Book deleted successfully.
 
-editora.create.success = Publisher successfully created. 
-editora.edit.success   = Publisher successfully edited.
-editora.delete.success = Publisher successfully deleted.
-editora.delete.fail = Publisher not deleted because there is/are associated book(s). 
+editora.create.success = Publisher created successfully.
+editora.edit.success   = Publisher edited successfully.
+editora.delete.success = Publisher deleted successfully.
+editora.delete.fail   = Publisher not deleted. It has linked book(s).
 
-usuario.create.success = User successfully created. 
-usuario.edit.success   = User successfully edited.
-usuario.delete.success = User successfully deleted.
+usuario.create.success = User created successfully.
+usuario.edit.success   = User edited successfully.
+usuario.delete.success = User deleted successfully.
 
-# Mensagens Login
+paciente.create.success = Patient created successfully.
+paciente.edit.success = Patient edited successfully.
+paciente.delete.success = Patient deleted successfully.
+paciente.delete.fail = Patient not deleted. It has linked appointment(s).
+
+consulta.create.success = Appointment scheduled successfully.
+consulta.create.indisponivel = Date/time not available. Please choose another date/time.
+consulta.delete.success = Appointment removed successfully.
+
+# Login Messages
 
 login.message  = Login Page
-login.username = Login
+login.email = Email
 login.password = Password
-login.button   = LogIn
+login.button   = Log In
 login.error    = Invalid username or password.
+login.username = Username
 
 user.role = Role
 
-
-
-login.listar = List doctors
-login.listaresp = List Doctors by Specialties
+login.listar = List Doctors
+login.listaresp = List Doctors by Specialty
 login.especialidade = Specialties
 login.especialidade.cardiologia = Cardiology
 login.especialidade.dermatologia = Dermatology
@@ -144,6 +176,12 @@ login.especialidade.pediatria = Pediatrics
 login.especialidade.urologia = Urology
 lista.esp = List of Doctors by Specialty
 
+medico.especialidade.label = Select a Specialty
 
+title.listaEspec.label = List of Doctors by Specialty
+title.listaMedicos.label = List of Doctors
 
-medico.especialidade.label=Select a specialty
+select-medico = Select a doctor.
+select-hora = Select a time.
+
+medico.editar.label = Edit Doctor
