Validacao de unico CRM de medico

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -186,3 +186,5 @@ select-medico = Selecione um médico.
 select-hora = Selecione um horário.
 
 medico.editar.label = Editar Médico
+
+Unique.medico.CRM = O CRM deve ser unico
