--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -185,3 +185,5 @@ select-medico = Select a doctor.
 select-hora = Select a time.
 
 medico.editar.label = Edit Doctor
+
+Unique.medico.CRM = The CRM must be unique.
