Validacao do CPF do paciente.

--- a/consultorio-T2/consultorio/src/main/resources/ValidationMessages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/ValidationMessages_en.properties
@@ -31,3 +31,5 @@ NotNull.consulta.medico = Select a doctor.
 # Patient Fields Validation
 
 past.paciente.dataNascimento = Enter a valid date.
+
+Unique.paciente.CPF = This CPF is already in use
