--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -188,3 +188,7 @@ select-hora = Selecione um horário.
 medico.editar.label = Editar Médico
 
 Unique.medico.CRM = O CRM deve ser unico
+
+size.paciente.CPF = O CPF deve ter 11 digitos
+
+Unique.paciente.CPF = Este CPF já está um uso
