--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -187,3 +187,6 @@ select-hora = Select a time.
 medico.editar.label = Edit Doctor
 
 Unique.medico.CRM = The CRM must be unique.
+
+size.paciente.CPF = The CPF must have 11 digits
+Unique.paciente.CPF = This CPF is already in use
