--- a/consultorio-T2/consultorio/src/main/resources/ValidationMessages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/ValidationMessages_en.properties
@@ -33,3 +33,5 @@ NotNull.consulta.medico = Select a doctor.
 past.paciente.dataNascimento = Enter a valid date.
 
 Unique.paciente.CPF = This CPF is already in use
+
+Unique.usuario.email = This email is already in use
