--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -174,6 +174,10 @@ login.especialidade.anestesiologia = Anestesiologia
 login.especialidade.ginecologia = Ginecologia
 login.especialidade.pediatria = Pediatria
 login.especialidade.urologia = Urologia
+login.especialidade.dentista = Dentista
+login.especialidade.oncologia = Oncologia
+login.especialidade.gastroenterologia = Gastroenterologia
+login.especialidade.radiologia = Radiologia
 lista.esp = Listagem de Médicos por Especialidade
 
 
@@ -192,3 +196,5 @@ Unique.medico.CRM = O CRM deve ser unico
 size.paciente.CPF = O CPF deve ter 11 digitos
 
 Unique.paciente.CPF = Este CPF já está um uso
+
+Unique.usuario.email = Este email já está em uso
