--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -174,6 +174,10 @@ login.especialidade.anestesiologia = Anesthesiology
 login.especialidade.ginecologia = Gynecology
 login.especialidade.pediatria = Pediatrics
 login.especialidade.urologia = Urology
+login.especialidade.dentista = Dentist
+login.especialidade.oncologia = Oncology
+login.especialidade.gastroenterologia = Gastroenterology
+login.especialidade.radiologia = Radiology
 lista.esp = List of Doctors by Specialty
 
 medico.especialidade.label = Select a Specialty
@@ -190,3 +194,5 @@ Unique.medico.CRM = The CRM must be unique.
 
 size.paciente.CPF = The CPF must have 11 digits
 Unique.paciente.CPF = This CPF is already in use
+
+Unique.usuario.email = This email is already in use
