ajustando detalhes finais

--- a/consultorio-T2/consultorio/src/main/resources/messages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages.properties
@@ -198,3 +198,7 @@ size.paciente.CPF = O CPF deve ter 11 digitos
 Unique.paciente.CPF = Este CPF já está um uso
 
 Unique.usuario.email = Este email já está em uso
+
+
+paciente.sexoM.label = Masculino
+paciente.sexoF.label = Feminino
