--- a/consultorio-T2/consultorio/src/main/resources/messages_en.properties
+++ b/consultorio-T2/consultorio/src/main/resources/messages_en.properties
@@ -196,3 +196,6 @@ size.paciente.CPF = The CPF must have 11 digits
 Unique.paciente.CPF = This CPF is already in use
 
 Unique.usuario.email = This email is already in use
+
+paciente.sexoM.label = Masculine
+paciente.sexoF.label = Feminine
